--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "glamorous-native": "^1.2.0",
-    "react": "16.0.0-beta.5",
+    "react": "16.0.0-alpha.12",
     "react-native": "0.49.3",
     "react-native-vector-icons": "^4.4.2",
     "react-navigation": "^1.0.0-beta.15"
@@ -17,7 +17,7 @@
     "babel-jest": "21.2.0",
     "babel-preset-react-native": "4.0.0",
     "jest": "21.2.1",
-    "react-test-renderer": "16.0.0-beta.5"
+    "react-test-renderer": "16.0.0-alpha.12"
   },
   "jest": {
     "preset": "react-native"
