--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
   "devDependencies": {
     "babel-jest": "21.2.0",
     "babel-preset-react-native": "4.0.0",
+    "eslint": "^4.10.0",
+    "eslint-plugin-react": "^7.4.0",
     "jest": "21.2.1",
     "react-test-renderer": "16.0.0-alpha.12"
   },
