--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,12 @@
     "react-navigation": "^1.0.0-beta.15"
   },
   "devDependencies": {
+    "babel-eslint": "^8.0.1",
     "babel-jest": "21.2.0",
     "babel-preset-react-native": "4.0.0",
     "eslint": "^4.10.0",
+    "eslint-plugin-babel": "^4.1.2",
+    "eslint-plugin-flowtype": "^2.39.1",
     "eslint-plugin-react": "^7.4.0",
     "jest": "21.2.1",
     "react-test-renderer": "16.0.0-alpha.12"
