--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "flow": "flow"
   },
   "dependencies": {
     "glamorous-native": "^1.2.0",
     "react": "16.0.0-alpha.12",
     "react-native": "0.49.3",
+    "react-native-material-kit": "git+https://git@github.com/xinthink/react-native-material-kit.git",
     "react-native-vector-icons": "^4.4.2",
     "react-navigation": "^1.0.0-beta.15"
   },
@@ -17,6 +19,7 @@
     "babel-eslint": "^8.0.1",
     "babel-jest": "21.2.0",
     "babel-preset-react-native": "4.0.0",
+    "flow-bin": "0.53.0",
     "eslint": "^4.10.0",
     "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-flowtype": "^2.39.1",
