--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "flow": "flow"
   },
   "dependencies": {
+    "eslint": "^4.10.0",
     "glamorous-native": "^1.2.0",
     "react": "16.0.0-alpha.12",
     "react-native": "0.49.3",
@@ -19,11 +20,12 @@
     "babel-eslint": "^8.0.1",
     "babel-jest": "21.2.0",
     "babel-preset-react-native": "4.0.0",
-    "flow-bin": "0.53.0",
     "eslint": "^4.10.0",
     "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-flowtype": "^2.39.1",
     "eslint-plugin-react": "^7.4.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "flow-bin": "0.53.0",
     "jest": "21.2.1",
     "react-test-renderer": "16.0.0-alpha.12"
   },
