--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,7 @@
     "eslint": "^4.10.0",
     "glamorous-native": "^1.2.0",
     "react": "16.0.0-alpha.12",
-    "react-native": "0.50.0-rc.2",
-    "react-native-camera": "^0.12.0",
+    "react-native": "0.49.3",
     "react-native-material-kit": "git+https://git@github.com/xinthink/react-native-material-kit.git",
     "react-native-vector-icons": "^4.4.2",
     "react-navigation": "^1.0.0-beta.19"
